# project-am-arc-agi-console

./: .dockerignore  .gitignore  Dockerfile  Makefile  PLAN.md  README.md  main.py  pyproject.toml  requirements.txt  web_interface.py
.github/workflows/: ci.yml
am/: __init__.py  data.py  evaluate.py  solver.py  train.py  trm.py
arc3/: __init__.py  agent.py
docs/: API.md  ARCHITECTURE.md  PORTFOLIO.md
tests/: test_web_interface.py
