[project]
name = "project-am-arc-agi-console"
version = "0.1.0"
description = "Full-stack local ARC-AGI research console with Python backend, browser UI, and PyTorch solver tooling."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24.0",
  "requests>=2.28.0",
  "torch>=2.0.0",
  "tqdm>=4.65.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
